--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <app-navbar></app-navbar>
 <div class="main-container">
-  <router-outlet></router-outlet>
+  <app-navigation></app-navigation>
+  <div class="main-content">
+    <router-outlet></router-outlet>
+  </div>
 </div>
