--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 *,
-*::before
-*::after {
-    box-sizing: border-box;
+*:before,
+*:after {
+    box-sizing: inherit;
 }
 
 html, body { 
     height: 100%;
+    box-sizing: border-box;
 }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
