--- a/src/app/layout/navigation/navigation.component.html
+++ b/src/app/layout/navigation/navigation.component.html
@@ -19,9 +19,9 @@
         <mat-icon>timeline</mat-icon>
         </a>
     </div>
-    <div class="menu-item">
+    <!-- <div class="menu-item">
         <a [routerLink]="['/']">
         <mat-icon>receipt_long</mat-icon>
         </a>
-    </div>
+    </div> -->
 </nav>
