--- a/src/app/views/welcome/welcome.component.html
+++ b/src/app/views/welcome/welcome.component.html
@@ -1,2 +1,5 @@
 <p>Welcome</p>
-<p>Please log in to start using expenses tracker</p>
+<ng-container *ngIf="(auth$ | async) as auth">
+    <p *ngIf="auth.uid">You are already logged in.</p>
+    <p *ngIf="!auth.uid">Please log in to start using expenses tracker</p>
+</ng-container>
