--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,12 @@
 .main-container {
   min-height: calc(100vh - 70px);
-  width: 100vw;
+  // width: 100vw;
   display: flex;
+}
+
+.main-content {
+  width: 100%;
+  height: 100%;
+  padding: 20px 30px;
 }
   
