--- a/src/app/core/login/login.component.scss
+++ b/src/app/core/login/login.component.scss
@@ -1,7 +1,7 @@
 .wrapper {
     text-align: center;
-    height: calc(100vh - 70px);
-    width: 100vw;
+    height: calc(100vh - 110px);
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
