fix issues with rwd, add snackbar service

--- a/src/app/features/expenses/add-expenses/add-expenses.component.html
+++ b/src/app/features/expenses/add-expenses/add-expenses.component.html
@@ -36,5 +36,5 @@
 
     <button mat-flat-button color="primary" type="submit" [disabled]="addExpenseForm.invalid">Save</button>
 </form>
-{{addExpenseForm.value | json}}
-{{addExpenseForm.status}}
+<!-- {{addExpenseForm.value | json}}
+{{addExpenseForm.status}} -->
