--- a/src/app/core/login/login.component.scss
+++ b/src/app/core/login/login.component.scss
@@ -21,14 +21,16 @@
 }
 
 .loginForm {
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 30px auto 60px;
+    margin: 30px 0 60px;
 
     .mat-form-field {
-        width: 350px;
+        max-width: 350px;
+        width: 100%;
     }
 
     .loginBtn {
