--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -15,6 +15,8 @@
     list-style: none;
     
     a {
+      color: #fff;
+      text-decoration: none;
       margin: 0 10px 0 0;
       &:hover {
         cursor: pointer; 
